@@ -1,3 +1,7 @@
+2015-09-05  Jérôme Pasquier  <rainbru@free.fr>
+
+	* CMakeLists.txt: trying to use rbuic using a custom_target.
+
 2015-08-24  Jérôme Pasquier  <rainbru@free.fr>
 
 	* CMakeLists.txt: conditionnal logger examples compilation works.
